# twoliter

./: CHANGELOG.md  Cargo.toml  DELETEME.md  build-variant.sh  build.rs
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
local/: alpha-sdk.sh
src/: common.rs  main.rs
src/cmd/: args.rs  build.rs  mod.rs
src/docker/: image.rs  mod.rs
tests/projects/bottlerocket-like/: .gitignore  README.md  Twoliter.toml  build.sh
tests/projects/bottlerocket-like/sbkeys/: README.md
tests/projects/bottlerocket-like/sources/models/src/variant/: README.md
tests/projects/bottlerocket-like/variants/: Cargo.toml
tests/projects/bottlerocket-like/variants/fake-dev/: Cargo.toml
tests/projects/local-kit/: Twoliter.toml
tests/projects/local-kit/kits/: Cargo.toml
tests/projects/local-kit/kits/core-kit/: Cargo.toml
tests/projects/local-kit/kits/extra-1-kit/: Cargo.toml
tests/projects/local-kit/kits/extra-2-kit/: Cargo.toml
tests/projects/local-kit/kits/hello-kit/: Cargo.toml
tests/projects/local-kit/variants/hello-ootb/: Cargo.toml
tests/projects/project1/: Twoliter.toml
tests/projects/project1/variants/hello-ootb/: Cargo.toml
tools/bottlerocket-variant/: Cargo.toml
tools/buildsys/: Cargo.toml
tools/buildsys/src/: args.rs  builder.rs  cache.rs  gomod.rs  main.rs  manifest.rs
tools/generate-readme/: Cargo.toml
tools/infrasys/: Cargo.toml
tools/parse-datetime/: Cargo.toml
tools/pubsys/: Cargo.toml
tools/pubsys-config/: Cargo.toml
tools/pubsys-setup/: Cargo.toml
tools/testsys/: Cargo.toml
tools/testsys-config/: Cargo.toml
tools/update-metadata/: Cargo.toml
twoliter/: Cargo.toml  build.rs
twoliter/embedded/: Dockerfile  Makefile.temp.toml  Makefile.toml  build.Dockerfile  rpm2img  rpm2kit  something.sh
twoliter/src/: cargo_make.rs  common.rs  main.rs  makefile.rs  project.rs  tools.rs  tools_hash.rs
twoliter/src/cmd/: build.rs  build_clean.rs  build_kit.rs  exec.rs  install.rs  make.rs  mod.rs
twoliter/src/docker/: Twoliter.dockerfile  commands.rs  image.rs  mod.rs  twoliter.rs
twoliter/src/embed/: Makefile.toml  mod.rs
twoliter/src/test/: mod.rs  twoliter_make.rs
