[package]
name = "twoliter"
version = "0.0.3-20230822134240"
edition = "2021"
description = "A command line tool for creating custom builds of Bottlerocket"
authors = ["Matthew James Briggs <brigmatt@amazon.com>"]
license = "MIT OR Apache-2.0"
keywords = ["twoliter", "bottlerocket"]
repository = "https://github.com/webern/twoliter"
exclude = ["/design", "/target", "/dockerfiles", "/scripts"]

[dependencies]
anyhow = "1"
async-recursion = "1"
clap = { version = "4", features = ["derive", "env", "std"] }
env_logger = "0.10"
flate2 = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
tar = "0.4"
tempfile = "3"
tokio = { version = "1", default-features = false, features = ["fs", "macros", "process", "rt-multi-thread"] }
toml = "0.7"

[build-dependencies]
buildsys = { version = "0.1.0", artifact = [ "bin:buildsys", "bin:bottlerocket-variant" ], path = "../tools/buildsys" }
bytes = "1"
flate2 = "1"
# TODO - is the artifact name required here?
pubsys = { version = "0.1.0", artifact = [ "bin:pubsys" ], path = "../tools/pubsys" }
pubsys-setup = { version = "0.1.0", artifact = [ "bin:pubsys-setup" ], path = "../tools/pubsys-setup" }
tar = "0.4"
testsys = { version = "0.1.0", artifact = [ "bin:testsys" ], path = "../tools/testsys" }
