[package]
name = "hello-kit"
version = "0.1.0"
edition = "2021"
publish = false
build = "../build.rs"
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

# TODO - it's weird for this to be in build-variant, move it to it's own structure?
[package.metadata.build-variant]
included-packages = [
    # in-tree packages
    "hello-agent",
    "hello-go",
]

[lib]
path = "../kit.rs"

[build-dependencies]
hello-agent = { path = "../../packages/hello-agent" }
hello-go = { path = "../../packages/hello-go" }
