[package]
name = "hello-ootb"
version = "0.1.0"
edition = "2021"
publish = false
build = "../build.rs"
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[package.metadata.build-variant.image-features]
grub-set-private-var = true
unified-cgroup-hierarchy = true
uefi-secure-boot = true
xfs-data-partition = true
systemd-networkd = true

[package.metadata.build-variant]
included-packages = ["pkg-a", "pkg-b", "pkg-c", "pkg-d"]
included-kits = ["hello-kit"]
kernel-parameters = []

[lib]
path = "../variants.rs"

[build-dependencies]
core-kit = { path = "../../kits/core-kit" }
extra-1-kit = { path = "../../kits/extra-1-kit" }
extra-2-kit = { path = "../../kits/extra-2-kit" }
